--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ keywords:
 - Jekyll
 
 # URL
-url: "https://krisztian-hofstadter-tedor.github.io/jekyll-multiling" # to add;
+url: "https://zzwsamuel.github.io/website" # to add;
 baseurl: ""
 
 # Google tracking (Analytics and Google Tag Manager)
